--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^15.14.9",
-    "@types/react": "^17.0.53",
-    "@types/react-dom": "^17.0.18",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/victor": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-particles": "^2.8.0",
     "react-scripts": "5.0.1",
     "tslib": "^2.4.1",
-    "tsparticles": "^2.8.0",
-    "tsparticles-engine": "^2.8.0",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "victor": "^1.1.0",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.8.3"
   }
 }
